--- a/MVC.SinglePage.Common/MVC.SinglePage.Common.csproj
+++ b/MVC.SinglePage.Common/MVC.SinglePage.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{532E9970-7E99-44EA-AA29-CD78FFD6A915}</ProjectGuid>
+    <ProjectGuid>{8A7AA033-F64D-40F3-A98A-4E3046319B52}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MVC.SinglePage.Data</RootNamespace>
-    <AssemblyName>MVC.SinglePage.Data</AssemblyName>
+    <RootNamespace>MVC.SinglePage.Common</RootNamespace>
+    <AssemblyName>MVC.SinglePage.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,16 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TrainingProduct.cs" />
+    <Compile Include="ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrainingProductManager.cs" />
-    <Compile Include="TrainingProductViewModel.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MVC.SinglePage.Common\MVC.SinglePage.Common.csproj">
-      <Project>{8a7aa033-f64d-40f3-a98a-4e3046319b52}</Project>
-      <Name>MVC.SinglePage.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
